task #151: delete error 500
